fixing spacing

--- a/src/style.css
+++ b/src/style.css
@@ -747,7 +747,7 @@ h3 {
 .background_qr {
   padding-top: 32px;
   width: 412px;
-  height: 80vh; /* Ensures full screen height */
+  height: 90vh; /* Ensures full screen height */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -756,8 +756,6 @@ h3 {
   background-size: cover;
   background-position: center;
   z-index: 1;
-   margin-top: 0;
-  padding-top: 0;
 }
 
 .title_qr {
